# tide

./: .gitignore  Makefile  README.md  paper.metrics.csv  pipe.py  pipe_raw.py  pyproject.toml  run-multiple.sh  view.ipynb
configs/baseline/: naive.yaml
configs/dataset/: electricity.yaml  electricity_paper.yaml  etth1.yaml  etth2.yaml  ettm1.yaml  ettm2.yaml  pattern.yaml  traffic.yaml  weather.yaml
configs/experiment/: electricity_96.yaml  pattern.yaml
configs/model/: electricity_96.yaml  etth1.yaml  etth2.yaml  ettm1.yaml  ettm2.yaml  pattern.yaml  traffic.yaml  weather.yaml
data/: .gitignore  all_dataset.py  electricity_dataset.py  electricity_paper_dataset.py  patterns_dataset.py
src/: revin.py  tide.py  tide_etna.py  tide_raw.py
